changed run command

--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -56,7 +56,8 @@ tasks:
 
       flutter devices
     
-      flutter run --web-port 8080
+      #flutter run --web-port 8080
+      flutter run --release -d web-server
 
 
 ports:
