Changed to Night Trains code

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: hello_world
+name: night_trains
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -28,6 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  #google_maps_flutter: ^2.0.10
+  #google_maps_flutter_web: ^0.3.0+4
+  url_launcher: ^6.0.10
 
 dev_dependencies:
   flutter_test:
