--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.hello_world">
+    package="com.example.night_trains">
    <application
-        android:label="hello_world"
+        android:label="night_trains"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
